--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "astro": "^4.12.2",
     "@astrojs/check": "^0.8.2",
+    "astro": "^4.12.2",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.23.2",
+    "eslint": "^9.7.0"
   }
 }
