--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/check": "^0.8.2",
     "astro": "^4.12.2",
+    "astro-iconify": "^1.2.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
