--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
+    "@astrojs/mdx": "^3.1.3",
     "astro": "^4.12.2",
     "astro-iconify": "^1.2.0",
     "typescript": "^5.5.4"
