--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/mdx": "^3.1.3",
     "astro": "^4.12.2",
     "astro-iconify": "^1.2.0",
+    "rehype-pretty-code": "^0.13.2",
+    "shiki": "^1.11.2",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
