--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^4.12.2",
     "astro-iconify": "^1.2.0",
     "rehype-pretty-code": "^0.13.2",
+    "sharp": "^0.33.4",
     "shiki": "^1.11.2",
     "typescript": "^5.5.4"
   },
