--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.2",
-    "@astrojs/mdx": "^3.1.3",
-    "astro": "^4.12.2",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.2.0",
+    "@chlorinec-pkgs/notion-astro-loader": "1.1.0-0",
+    "astro": "^5.5.2",
     "astro-iconify": "^1.2.0",
     "rehype-pretty-code": "^0.13.2",
     "shiki": "^1.11.2",
